# parallelized-acotsp

./: .gitignore  Cargo.toml  README.md  mmasrun.json
src/: instance_data.rs  logger.rs  main.rs  parameters_reader.rs  timer.rs  tsplibreader.rs  util.rs
src/aco/: aco_parameters.rs  acs.rs  acspar.rs  ant.rs  colony.rs  mmas.rs  mod.rs  result_log.rs
