[package]
authors = ["Iago"]
edition = "2018"
name = "parallelized-acotsp"
version = "0.1.0"
[dependencies]
clap = "2.33.0"
indexmap = "1.2.0"
itertools = "0.8.0"
lazy_static = "1.4.0"
parking_lot = "0.9.0"
rand = "0.7.0"
rayon = "1.2.0"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
